@@ -23,6 +23,12 @@
     <escp/><!--no pjl-->
   </lang>
   <autodetect>
+    <usb>
+      <commandset>ESCPL2,BDC,D4</commandset>
+      <description>EPSON Stylus C82</description>
+      <manufacturer>EPSON</manufacturer>
+      <model>Stylus C82</model>
+    </usb>
   </autodetect>
   <functionality>A</functionality>
   <driver>gimp-print</driver>
