@@ -1,3 +1,8 @@
+2005-02-08  Tim Waugh <twaugh@redhat.com>
+
+	* printer/Epson-Stylus_C82.xml: Added IEEE 1284 information (RH
+	  bug #147230).
+
 2005-01-24  Tim Waugh <twaugh@redhat.com>
 
 	* printer/HP-DeskJet_880C.xml: Added IEEE 1284 information (RH
